--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "^4.21.1",
     "lodash": "^4.17.21",
-    "mongoose": "^8.8.3"
+    "mongoose": "^8.8.3",
+    "morgan": "^1.10.0"
   },
   "scripts": {
     "start": "nodemon app.js"
